--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,13 +14,17 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    /* --background: #0a0a0a; */
+    --background: #232730;
     --foreground: #ededed;
   }
 }
 
 body {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
   background: var(--background);
-  color: var(--foreground);
+  color: black;
   font-family: Arial, Helvetica, sans-serif;
 }
